--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,76 @@
 [project]
-name = "sap-deom"
+name = "pii-shield"
 version = "0.1.0"
-description = "Add your description here"
-requires-python = ">=3.14"
-dependencies = [
-    "jupyterlab>=4.5.1",
-    "matplotlib>=3.10.8",
-    "pandas>=2.3.3",
+description = "Intelligent de-identification service for PII detection and removal"
+readme = "README.md"
+requires-python = ">=3.13"
+license = { text = "MIT" }
+authors = [{ name = "Omar Gawdat" }]
+keywords = ["pii", "gdpr", "data-protection", "de-identification", "privacy"]
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3.13",
+    "Topic :: Security",
 ]
+
+dependencies = [
+    "presidio-analyzer>=2.2",
+    "presidio-anonymizer>=2.2",
+    "spacy>=3.7",
+    "fastapi>=0.115",
+    "pydantic>=2.0",
+    "uvicorn>=0.32",
+]
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=8.0",
+    "pytest-cov>=6.0",
+    "ruff>=0.8",
+    "pre-commit>=4.0",
+    "httpx>=0.28",
+]
+demo = [
+    "streamlit>=1.40",
+]
+databricks = [
+    "pyspark>=3.5",
+    "delta-spark>=3.2",
+]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/pii_shield"]
+
+[tool.ruff]
+target-version = "py313"
+line-length = 100
+src = ["src", "tests"]
+
+[tool.ruff.lint]
+select = [
+    "E",      # pycodestyle errors
+    "W",      # pycodestyle warnings
+    "F",      # pyflakes
+    "I",      # isort
+    "B",      # flake8-bugbear
+    "C4",     # flake8-comprehensions
+    "UP",     # pyupgrade
+    "SIM",    # flake8-simplify
+]
+ignore = [
+    "E501",   # line too long (handled by formatter)
+]
+
+[tool.ruff.lint.isort]
+known-first-party = ["pii_shield"]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+pythonpath = ["src"]
+addopts = "-v --tb=short"
