feat: add profesional UI design for streamlit and use panda for adding useful insights about the process

--- a/.dockerignore
+++ b/.dockerignore
@@ -38,9 +38,8 @@ venv/
 .github/
 justfile
 
-# Documentation and demo (not needed in production)
+# Documentation (not needed in production)
 docs/
-demo/
 notebooks/
 
 # Tests (not needed in production image)
