--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -10,6 +10,8 @@ services:
     volumes:
       # Mount source code for hot reload
       - ./src:/app/src:ro
+    env_file:
+      - .env
     environment:
       - PYTHONPATH=/app/src
     command: uvicorn pii_shield.api.main:app --host 0.0.0.0 --port 8000 --reload --reload-dir /app/src
