--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ dependencies = [
     "fastapi>=0.115",
     "pydantic>=2.0",
     "uvicorn>=0.32",
+    "anthropic>=0.40.0",
+    "python-dotenv>=1.0",
 ]
 
 [project.optional-dependencies]
