--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,19 @@ secrets/
 tmp/
 temp/
 *.tmp
+
+# Terraform
+.terraform/
+*.tfstate
+*.tfstate.*
+*.tfvars
+!terraform.tfvars.example
+.terraform.lock.hcl
+crash.log
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+
+# AWS
+infrastructure/aws/resources.env
