fix: use de_core_news_md spaCy model in CI

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,9 @@ jobs:
       - name: Install dependencies
         run: uv sync --frozen --extra dev
 
+      - name: Download spaCy German model
+        run: uv run python -m spacy download de_core_news_md
+
       - name: Run linting
         run: uv run ruff check .
 
