--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,45 +7,29 @@ on:
       - 'src/**'
       - 'Dockerfile'
       - 'pyproject.toml'
+      - 'tests/**'
+      - '.github/workflows/deploy.yml'
   workflow_dispatch:
 
 jobs:
-  test:
-    name: Run Tests
+  build-test-deploy:
+    name: Build, Test, and Deploy
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.13"
-
-      - name: Install uv
-        uses: astral-sh/setup-uv@v4
-        with:
-          version: "latest"
-
-      - name: Install dependencies
-        run: uv sync --frozen --extra dev
-
-      - name: Download spaCy German model
-        run: uv run python -m spacy download de_core_news_md
+      - name: Build test image
+        run: docker build --target test -t pii-shield-api:test .
 
       - name: Run linting
-        run: uv run ruff check .
+        run: docker run --rm pii-shield-api:test uv run ruff check .
 
       - name: Run tests
-        run: uv run pytest tests/ -v --tb=short
+        run: docker run --rm pii-shield-api:test uv run pytest tests/ -v --tb=short
 
-  deploy:
-    name: Build and Push to ECR
-    needs: test
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - name: Build production image
+        run: docker build --target production -t pii-shield-api:prod .
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -58,13 +42,12 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
 
-      - name: Build and Push Docker Image to ECR
+      - name: Tag and push image to ECR
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY_NAME }}
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          IMAGE_URI="$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
-          docker build --platform linux/amd64 -t "$IMAGE_URI" -f Dockerfile .
-          docker push "$IMAGE_URI"
-          echo "Docker image pushed to: $IMAGE_URI"
+          docker tag pii-shield-api:prod "$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+          docker push "$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+          echo "Docker image pushed to: $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
