feat: Streamlit Cloud deployment + LLM validation comparison table
Changes:
- Add professional README with badges and architecture diagram
- Add Streamlit Cloud compatibility (sys.path fix, demo deps in main)
- Add Dev Container configuration
- Add LLM validation comparison table in Step 2 (shows before/after confidence)
- Fix API docs URL in terraform output
- Push :latest tag to ECR in CI workflow
- Fix is_available property access in test
- Allow tests directory in Docker build

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,5 +49,8 @@ jobs:
           IMAGE_TAG: ${{ github.sha }}
         run: |
           docker tag pii-shield-api:prod "$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+          docker tag pii-shield-api:prod "$ECR_REGISTRY/$ECR_REPOSITORY:latest"
           docker push "$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+          docker push "$ECR_REGISTRY/$ECR_REPOSITORY:latest"
           echo "Docker image pushed to: $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+          echo "Docker image pushed to: $ECR_REGISTRY/$ECR_REPOSITORY:latest"
